--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.highlight {
+  background-color: #3e8989;
+};
+
+.navbarstyle {
+background-color: #3e8989 !important;
+}
