added MainContent, practiced handle and update component state, css, etc

--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,12 @@
 
 .highlight {
   background-color: #3e8989;
-};
+}
 
 .navbarstyle {
-background-color: #3e8989 !important;
+background-color: #4f75c3b0 !important;
+}
+
+.badgestyle {
+  background-color:black !important;
 }
