--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 }
 
 .navbarstyle {
-background-color: rgb(3, 142, 3) !important;
+background-color: grey !important;
 }
 
 .badgestyle {
@@ -72,4 +72,88 @@ td {
 
 .delete-button {
   cursor: pointer;
+}
+
+.links-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 10px;
+}
+
+.link-item {
+  list-style: none;
+  overflow: hidden;
+}
+
+.link {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  padding: 10px;  
+  text-shadow: 
+    -3px 3px 0 grey,
+     -3px 3px 0 grey,
+    -3px 3px 0 grey,
+     -3px 3px 0 grey;
+  font-size: 5em;
+  background-size: cover;
+  background-position: center;
+  padding: 100px;
+  border-radius: 5px;
+  font-family: 'Montserrat', sans-serif; 
+  transition: transform 0.3s ease-in-out;
+  background: rgba(0, 0, 0, 0.5); 
+  margin: -2px;
+}
+
+
+
+.link-item:nth-child(1) .link {
+  margin-top: 20px; 
+  background-image: url('https://cdn.pixabay.com/photo/2017/06/10/16/22/coffee-2390136_1280.jpg');
+  background-size: 100%;
+}
+
+.link-item:nth-child(2) .link {
+  margin-top: 20px; 
+  background-image: url('https://cdn.pixabay.com/photo/2016/03/23/04/01/woman-1274056_1280.jpg');
+  background-size: 100%;
+}
+
+.link-item:nth-child(3) .link {
+  margin-top: 20px; 
+  background-image: url('https://cdn.pixabay.com/photo/2015/01/08/18/29/entrepreneur-593358_1280.jpg');
+  background-size: 100%;
+}
+
+.link-item:nth-child(4) .link {
+  background-image: url('https://cdn.pixabay.com/photo/2015/06/22/08/37/children-817365_1280.jpg');
+  background-size: 100%;
+}
+
+.link-item:nth-child(5) .link {
+  background-image: url('https://cdn.pixabay.com/photo/2015/01/20/12/51/mobile-605422_1280.jpg');
+  background-size: 100%;
+}
+
+.link-item:nth-child(6) .link {
+  background-image: url('https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492_1280.jpg');
+  background-size: 100%;
+}
+
+.SearchButton {
+  color: green !important;
+  background-color: white !important;
+  text-align: center;
+}
+
+.nav-item{
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
